[package]
name = "chaos"
version = "0.1.0"
authors = ["chansuke <chansuke@georepublic.de>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader_precompiled = "0.2.0"
volatile = "0.2.3"
uart_16550 = "0.1.0"
x86_64 = "0.2.8"

[package.metadata.bootimage]
default-target = "x86_64-chaos.json"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.spin]
spin = "0.4.8"
default-features = false

[dev-dependencies]
array-init = "0.0.3"

[features]
integration-test = []
